; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_vfs_open.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_vfs_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.myvfs_file = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32*, i32 }

@fs = common dso_local global i32 0, align 4
@VFS_FS_SPIFFS = common dso_local global i32 0, align 4
@myspiffs_file_fns = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*)* @myspiffs_vfs_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @myspiffs_vfs_open(i8* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.myvfs_file*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @fs_mode2flag(i8* %8)
  store i32 %9, i32* %7, align 4
  %10 = call i64 @malloc(i32 24)
  %11 = inttoptr i64 %10 to %struct.myvfs_file*
  store %struct.myvfs_file* %11, %struct.myvfs_file** %6, align 8
  %12 = icmp ne %struct.myvfs_file* %11, null
  br i1 %12, label %13, label %34

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @SPIFFS_open(i32* @fs, i8* %14, i32 %15, i32 0)
  %17 = load %struct.myvfs_file*, %struct.myvfs_file** %6, align 8
  %18 = getelementptr inbounds %struct.myvfs_file, %struct.myvfs_file* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 8
  %19 = icmp slt i32 0, %16
  br i1 %19, label %20, label %30

20:                                               ; preds = %13
  %21 = load i32, i32* @VFS_FS_SPIFFS, align 4
  %22 = load %struct.myvfs_file*, %struct.myvfs_file** %6, align 8
  %23 = getelementptr inbounds %struct.myvfs_file, %struct.myvfs_file* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  store i32 %21, i32* %24, align 8
  %25 = load %struct.myvfs_file*, %struct.myvfs_file** %6, align 8
  %26 = getelementptr inbounds %struct.myvfs_file, %struct.myvfs_file* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32* @myspiffs_file_fns, i32** %27, align 8
  %28 = load %struct.myvfs_file*, %struct.myvfs_file** %6, align 8
  %29 = bitcast %struct.myvfs_file* %28 to i32*
  store i32* %29, i32** %3, align 8
  br label %35

30:                                               ; preds = %13
  %31 = load %struct.myvfs_file*, %struct.myvfs_file** %6, align 8
  %32 = call i32 @free(%struct.myvfs_file* %31)
  br label %33

33:                                               ; preds = %30
  br label %34

34:                                               ; preds = %33, %2
  store i32* null, i32** %3, align 8
  br label %35

35:                                               ; preds = %34, %20
  %36 = load i32*, i32** %3, align 8
  ret i32* %36
}

declare dso_local i32 @fs_mode2flag(i8*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @SPIFFS_open(i32*, i8*, i32, i32) #1

declare dso_local i32 @free(%struct.myvfs_file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
